--- a/style.css
+++ b/style.css
@@ -17,3 +17,42 @@ color: white; border-radius: 10px; padding: 30px 40px;
 wrapper hi {
 font-size: 36px; text-align: center;
 }
+wrapper. input-box i position: relative;
+margin: 10px 0; width: 100%; height: 50px; margin:
+30px 0;
+}
+input-box input f
+width: 100%; height: 100%;
+background: transparent;
+border: none; outline: none;
+border: 2px solid rgb(255, 255, 255, .2); border-radius: 40px; font-size: 16px; color: white;
+padding: 20px 45px 20px 20px;
+}
+• input-box input:: placeholder { color: white;
+-input-box i {
+position: absolute;
+right: 20px;
+top: 50%;
+transform: translateY(-50%); font-size: 20px;
+-wrapper - remember-forgot 1
+display: flex; justify-content: space-between; font-size: 14.5px; margin: -15px 0 15px;
+• remember-forgot label input i accent-color: white; margin-right: 3px;
+}
+• remember-forgot a { color: white;
+text-decoration: none;
+}
+- remember-forgot a:hover {
+text-decoration: underline;
+}
+•wrapper .btn { width: 100%; height: 45px;
+background: white;
+border: none; outline: none; border-radius: 40px;
+box-shadow: 0 0 10px rgb(0, 0, 0, .1); cursor: pointer; font-size: 16px;
+color: #333; font-weight: 600;
+• wrapper .register-link t font-size: 14.5px; text-align: center; margin: 20px 0 15px;
+}
+•register-link p a 1
+color: white;
+text-decoration: none; font-weight: 600;
+• register-link p a:hover { text-decoration: underline;
+}
